# Claude-Code-Workflow

./: .gitignore  .npmignore  CHANGELOG.md  COMMAND_REFERENCE.md  FAQ.md  GETTING_STARTED.md  GETTING_STARTED_CN.md  INSTALL.md  INSTALL_CN.md  META_SKILL_SUMMARY.md  README.md  README_CN.md  TASK6_SUMMARY.md  UNIFIED_EXECUTE_SUMMARY.md  WORKFLOW_GUIDE.md  WORKFLOW_GUIDE_CN.md  codex_prompt.md  package-lock.json  package.json  skill-tuning-diagnosis.json  status-reference.md  test-ask-question-direct.mjs  test-ask-question.js  test-command-build.mjs  test-config-debug.mjs  test-config.js  test-config.mjs  test-e2e-ask-question.mjs  test-e2e-final.mjs  test-frontend-simulation.mjs  test-simple.mjs  test-tool-registration.mjs  test-websocket-listener.mjs  test-ws-integrated.mjs  validate-help.py
.claude/: CLAUDE.md
.workflow/: issues.jsonl  project-guidelines.json  project-tech.json
archive/: 1.18.0  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_NAME_FIX_SUMMARY.md  benchmark_search.py  compare_reranker.py  compare_search.py  gemini-workflow.test.ts  multi-tool-workflow.test.ts  orchestration.test.ts  refactor_temp.py  test_embeddings_improvements.py  ui-generate-preview.visual.test.ts  ui-instantiate-prototypes.visual.test.ts  visual-tester.test.ts
ccw/: .npmrc  DUAL_FRONTEND_MIGRATION_PLAN.md  MONOREPO.md  README.md  package-lock.json  package.json  tsconfig.json  (+1 more)
codex-lens/: LICENSE  README.md  pyproject.toml
codex-lens/benchmarks/: compare_staged_stage2_modes.py
codex-lens/docs/: CONFIGURATION.md
codex-lens/src/codex_lens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
codex-lens/src/codexlens/: config.py  env_config.py
codex-lens/src/codexlens/api/: semantic.py
codex-lens/src/codexlens/cli/: commands.py
codex-lens/src/codexlens/parsers/: __init__.py  astgrep_binding.py  astgrep_js_ts_processor.py  astgrep_processor.py  factory.py  treesitter_parser.py
codex-lens/src/codexlens/parsers/patterns/: __init__.py
codex-lens/src/codexlens/parsers/patterns/javascript/: __init__.py
codex-lens/src/codexlens/parsers/patterns/python/: __init__.py  call.yaml  imports.yaml  inherits.yaml
codex-lens/src/codexlens/parsers/patterns/typescript/: __init__.py
codex-lens/src/codexlens/search/: chain_search.py
codex-lens/src/codexlens/storage/: index_tree.py
codex-lens/src/codexlens/watcher/: incremental_indexer.py
codex-lens/tests/: test_astgrep_binding.py  test_config_cascade.py  test_config_staged_env_overrides.py  test_parsers.py  test_performance_optimizations.py
codex-lens/tests/api/: test_semantic_search.py
codex-lens/tests/parsers/: __init__.py  test_astgrep_extraction.py  test_astgrep_processor.py  test_comparison.py  test_comparison_js_ts.py
(+3023 files in other folders)
